<resources>
    <string name="app_name" translatable="false">Story App</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="welcome">Welcome to Story App</string>
    <string name="go_to_register_btn">Go to register</string>
    <string name="login_btn">Login</string>
    <string name="email_validation_message">Email is invalid</string>
    <string name="password_validation_message">Password must have at least 6 characters</string>
    <string name="login_screen_message">Please login first or register a new account</string>
    <string name="go_to_login_btn">Go to login</string>
    <string name="register_btn">Register</string>
    <string name="name_hint">Name</string>
    <string name="name_validation_message">Name cannot be empty</string>
    <string name="validation_error">Check your input again</string>
    <string name="register_success">Successfully registered</string>
    <string name="login_success">Successfully logged in</string>
    <string name="logging_in">Logging in....</string>
    <string name="registering">Registering....</string>
    <string name="log_out">Log Out</string>
    <string name="generic_error">Something\'s wrong</string>
    <string name="stories_user">By %1$s</string>
    <string name="stories_content_description">Story by %1$s</string>
    <string name="stories_uploaded">Uploaded at %1$s</string>
    <string name="stories_desc">Description: %1$s</string>
    <string name="back_btn">Back</string>
    <string name="loading_data">Loading....</string>
    <string name="no_data">There is no data</string>
    <string name="retry">Retry</string>
    <string name="add_btn_content_description">Add new story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_new">Add story</string>
    <string name="desc_validation_message">Description cannot be empty</string>
    <string name="chooser_title">Choose a image</string>
    <string name="description_hint">Description</string>
    <string name="permission_denied">Permission request is denied</string>
    <string name="take_picture_success">Picture taken successfully</string>
    <string name="take_picture_fail">Take picture failed</string>
    <string name="uploading">Uploading image....</string>
    <string name="preview_of_image">Preview of image</string>
    <string name="upload_success">Story successfully added</string>
    <string name="setting">Language Setting</string>
    <string name="camera_fail">Opening camera failed</string>
    <string name="load_picture_success">Picture successfully loaded</string>
    <string name="appwidget_text" translatable="false">Stories Widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">App widget to show all story</string>
    <string name="widget_login_text">Please login before using widget</string>
    <string name="default_user">Unknown User</string>
    <string name="auth" translatable="false">Bearer %1$s</string>
    <string name="widget_empty_data">Data is empty or failed to get data</string>
    <string name="capture_desc">Capture an image</string>
    <string name="switch_desc">Switch the camera</string>
    <string name="map">Stories In Map</string>
    <string name="marker_snippet">Click to open the story</string>
    <string name="get_location">Get Location</string>
    <string name="location">Latitude: %1$f, Longitude: %2$f</string>
    <string name="location_loading">Getting location....</string>
    <string name="continue_with_offline_mode">Continue with offline mode</string>
    <string name="story_list_is_empty">Story list is empty</string>
</resources>